# gpu_image_statistics

./: CMakeLists.txt  referenceCalc.m
include/: common.h  cpuCalculations.h
src/: cpuCalculations.cpp  kernCalcBlockHist.cu  kernCalcCornerBlockHist.cu  kernCalcStatistics.cu  main.cu
